<?xml version="1.0"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:id="@+id/brightnessContrastImageView"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/def"
        android:layout_weight="0.3"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="120dp"
        android:layout_width="fill_parent">
        <SeekBar
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:max="510"
            android:progress="255"
            android:id="@+id/brightnessSeekBar"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
            <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:id="@+id/brightnessText1"
	            android:text="@string/modBrightness"/>
            <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:id="@+id/brightnessText2"
	            android:text="@string/currBrightness"/>
        </LinearLayout>
        <SeekBar
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:max="2000"
            android:progress="100"
            android:id="@+id/contrastSeekBar"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/contrastText"
            android:text="@string/contrast"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:id="@+id/linearLayout3">
        <Button
            android:layout_height="fill_parent"
            android:layout_width="70dp"
            android:id="@+id/buttonSave"
            android:text="@string/save"
            android:onClick="save"/>
        <Button
            android:layout_height="fill_parent"
            android:layout_width="70dp"
            android:id="@+id/buttonSaveAs"
            android:text="@string/saveAs"
            android:onClick="saveAs"/>
        <Button
            android:layout_height="fill_parent"
            android:layout_width="70dp"
            android:id="@+id/buttonVideo"
            android:text="@string/liveVideo"
            android:onClick="video"/>
        <Button
            android:layout_height="fill_parent"
            android:layout_width="70dp"
            android:id="@+id/buttonVideoServer"
            android:text="@string/videoServer"
            android:onClick="videoServer"/>
    </LinearLayout>
</LinearLayout>