<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    android:fillViewport="true"
    android:background="@color/translucent"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView 
        android:layout_height="20dip"
        android:layout_width="fill_parent"
        />
    <EditText
        android:background="@color/black"
        android:textSize="30dip"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:hint="@string/filename"
        android:id="@+id/saveAsText"
        />
    <TextView 
        android:layout_height="20dip"
        android:layout_width="fill_parent"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/linearLayout3">
	    <Button
	        android:layout_height="fill_parent"
	        android:layout_width="80dip"
	        android:text="@string/ok"
	        android:onClick="ok"
	        />
	    <Button
	        android:layout_height="fill_parent"
	        android:layout_width="80dip"
	        android:text="@string/cancel"
	        android:onClick="cancel"
	        />
	 </LinearLayout>
</LinearLayout>